Fixed line spacing issue at proficiancy text

--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -21,6 +21,11 @@
 }
 .skill {
   line-height: 3.5vw;
+  margin-bottom: 1.5rem;
+}
+
+.skill > p {
+  margin-bottom: 0.4rem;
 }
 .skill-bars {
   font-size: 28px;
